Fix footer on small screens to not wrap oddly.

--- a/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
+++ b/my_profile/themes/custom/geek_portland/sass/geek_portland.scss
@@ -735,7 +735,7 @@ embed {
       text-align: center;
 
       li {
-        display: inline;
+        display: inline-block;
         padding: 0 4em;
         border-right: 2px solid #E6E4DE;
 
